--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="The Ultimate Panel For Web3"
+      content="The Ultimate Bank For Web3"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>UliPanel</title>
+    <title>UliBank</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
